--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.4",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
