--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8.4.23",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.1",
+    "tailwindcss-dotted-background": "^1.1.0",
     "vite": "^4.3.0"
   }
 }
